# ZerotierFix-Build

./: Android.mk  Application.mk  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
